<resources>
    <string name="app_name">Recep</string>
    <string name="home_title">RECEP</string>
    <string name="home_subtitle">Search Recipes With Ease</string>
    <string name="search_hint">Search recipes</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_home_add">New Recipe</string>
    <string name="menu_bookmark_title">Bookmark</string>
    <string name="view_description">Description</string>
    <string name="view_ingredients">Ingredients</string>
    <string name="view_equipments">Equipments</string>
    <string name="view_directions">Directions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="view_image">Image Preview</string>
    <string name="add_title">New Recipe</string>
    <string name="add_name">Name</string>
    <string name="add_add_ingredient">Add Ingredient</string>
    <string name="add_add_equipment">Add Equipment</string>
    <string name="add_add_direction">Add Direction</string>
    <string name="add_publish_recipe">Publish Recipe</string>
</resources>