<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipeAddImage"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:contentDescription="@string/view_image"

            android:scaleType="centerCrop"
            android:src="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <EditText
                android:id="@+id/recipeAddName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/add_name"
                android:inputType="text"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <EditText
                android:id="@+id/recipeAddDescription"
                android:layout_width="match_parent"
                android:layout_height="196dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/view_description"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_ingredients" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipeAddIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_cell_new_item" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/recipeAddNewIngredient"
                        android:layout_width="198dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_add_ingredient"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_equipments" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipeAddEquipments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_cell_new_item" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/recipeAddNewEquipment"
                        android:text="@string/add_add_equipment"
                        android:layout_width="198dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_directions" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipeAddDirections"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_cell_new_item" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/recipeAddNewDirection"
                        android:text="@string/add_add_direction"
                        android:layout_width="198dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/recipeAddPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_publish_recipe" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>